kubernetes/apps/k8s/rook-ceph/rook-ceph/cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: "rook.${DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              number: 7000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "rook.${DOMAIN}"
